--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "sourceMap": true,
+    "outDir": "build"
   },
+  "esm": true,
   "include": [
-    "src"
+    "**.ts",
+    "frontend/src"
   ]
 }
