finished dev setup

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "export PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,5 +49,6 @@
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
