--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.2"
   },
   "type": "module"
 }
