--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nooks-youtube-watch-party-takehome",
+  "name": "@nookstakehome/frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,11 +14,13 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "common": "file:../common",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.7.1",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -50,5 +52,6 @@
   "devDependencies": {
     "@types/uuid": "^8.3.4"
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3000",
+  "type": "module"
 }
