--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -21,10 +21,12 @@
     "outDir": "build"
   },
   "ts-node": {
-    "esm": true
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
   "include": [
     "**.ts",
+    "backend/index.ts",
   ],
   "exclude": [
     "./frontend",
