--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,10 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "common": "file:../common",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
     "socket.io-client": "^4.7.1",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
@@ -50,7 +48,10 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4"
+    "@craco/craco": "^7.1.0",
+    "@svgr/webpack": "^8.0.1",
+    "@types/uuid": "^8.3.4",
+    "react-scripts": "^5.0.1"
   },
   "proxy": "http://localhost:3000",
   "type": "module"
