--- a/common/package.json
+++ b/common/package.json
@@ -2,7 +2,7 @@
   "name": "@nookstakehome/common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "dependencies": {
     "typescript": "^4.9.5"
   },
