--- a/package.json
+++ b/package.json
@@ -17,21 +17,9 @@
     "url": "https://github.com/darren-huang/nooks-fullstack-takehome/issues"
   },
   "homepage": "https://github.com/darren-huang/nooks-fullstack-takehome#readme",
-  "dependencies": {
-    "common": "^1.0.0",
-    "express": "^4.18.2",
-    "mongoose": "^7.3.4",
-    "socket.io": "^4.7.1",
-    "typescript": "^5.1.6",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.2",
-    "@types/uuid": "^9.0.2"
-  },
   "type": "module",
   "workspaces": [
+    "backend",
     "frontend",
     "common"
   ]
