--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,20 +13,17 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
-    "outDir": "build"
+    "jsx": "react-jsx"
   },
   "ts-node": {
     "esm": true
   },
   "include": [
     "**.ts",
+    "**.tsx",
   ],
-  "exclude": [
-    "./frontend",
-  ]
 }
