--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-youtube": "^10.1.0",
     "socket.io-client": "^4.7.1",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
