--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,8 @@
 {
-    "extends": "../tsconfig.json",
-    "include": [
-        "**.ts",
-    ]
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "noEmit": false,
+    "outDir": "build"
+  },
+  "include": ["**.ts"]
 }
