--- a/common/package.json
+++ b/common/package.json
@@ -11,7 +11,8 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "build-watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
