--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Watch Party Project",
   "main": "index.js",
   "scripts": {
+    "common:build-watch": "npm -w common run build-watch",
+    "backend:build-watch": "npm -w backend run build-watch",
+    "frontend:start": "npm -w frontend run start",
     "start": "npx ts-node index.ts",
+    "build-watch": "npm-run-all --parallel *:build-watch",
+    "dev": "npm-run-all --parallel common:build-watch backend:build-watch frontend:start start",
     "build": "npm run build --workspaces --if-present && tsc -b"
   },
   "repository": {
@@ -22,5 +27,8 @@
     "common",
     "frontend",
     "backend"
-  ]
+  ],
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
